@@ -51,12 +51,13 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 413)
-(Parent-Version lpmud 3-3 412)
-(Version-Log "Mapping compaction is now part of the object cleanup process.")
+(Project-Version lpmud 3-3 414)
+(Parent-Version lpmud 3-3 413)
+(Version-Log "Corrected build warnings.
+Added a mapping compaction condition.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 06 Mar 2003 01:16:41 -0700")
+(Checkin-Time "Thu, 06 Mar 2003 23:05:17 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -93,7 +94,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.59 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.476 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.477 644))
   (HISTORY (lpmud/f/49_HISTORY 1.306 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -166,7 +167,7 @@
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.31 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.24 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
-  (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.7 644))
+  (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.28 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
@@ -185,15 +186,15 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.23 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.49 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.50 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.37 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.16 644))
-  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.58 644))
+  (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.59 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
   (src/md5.c (lpmud/l/19_md5.c 1.6 644))
-  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.7 644))
-  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.11 644))
+  (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
+  (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.12 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
   (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.27 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.20 644))
@@ -1281,7 +1282,7 @@
   (doc/efun/regreplace.de (lpmud/l/35_regreplace 1.2 644))
   (doc/efun/sgn.de (lpmud/s/34_sgn.de 1.1 644))
   (doc/efun/sin.de (lpmud/s/35_sin.de 1.1 644))
-  (doc/efun/sprintf.de (lpmud/l/36_sprintf.de 1.3 644))
+  (doc/efun/sprintf.de (lpmud/l/36_sprintf.de 1.4 644))
   (doc/efun/stringp.de (lpmud/t/5_stringp.de 1.1 644))
   (doc/efun/symbolp.de (lpmud/t/6_symbolp.de 1.1 644))
   (doc/efun/tan.de (lpmud/s/36_tan.de 1.1 644))
